--- a/style.css
+++ b/style.css
@@ -1,3 +1,23 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-family: 'Roboto', sans-serif;
+}
+
+.main {
+  margin-left: 20%;
+  margin-right: 20%;
+}
+
 .heading {
-  font-size: x-large;
+  font-weight: 800;
+  font-size: 42px;
+}
+
+.heading-sub {
+  font-weight: 400;
+  font-size: 18px;
 }
