--- a/style.css
+++ b/style.css
@@ -4,20 +4,266 @@
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
+  background-color: #222;
+  color: #fff;
 }
 
 .main {
-  margin-left: 20%;
-  margin-right: 20%;
+  padding-left: 20%;
+  padding-right: 20%;
 }
 
 .heading {
   font-weight: 800;
   font-size: 42px;
+  padding-top: 5%;
+  padding-bottom: 5%;
 }
 
-.heading-sub {
-  font-weight: 400;
+/* Navbar styling */
+.navbar {
+  background-color: #333;
+  overflow: hidden;
+}
+
+.navbar ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+.navbar ul li {
+  list-style-type: none;
+  float: left;
+}
+
+.navbar ul li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+.navbar ul li a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Dark mode styles */
+.dark-mode {
+  background-color: white;
+  color: black;
+}
+
+.dark-mode .navbar {
+  background-color: #111;
+}
+
+/* CSS for ABOUT section */
+
+
+.hero-content {
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+.hero-content h1 {
+  font-size: 36px;
+  margin-bottom: 10px;
+}
+
+.hero-content p {
   font-size: 18px;
+  color: #666;
+  margin-bottom: 20px;
+}
+
+.hero-content p:last-child {
+  margin-bottom: 0;
+}
+
+/* CSS for EXPERIENCE */
+.experience-container {
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+.experience {
+  margin-bottom: 40px;
+}
+
+.experience h2 {
+  margin-bottom: 5px;
+}
+
+
+
+.duration {
+  font-style: italic;
+  color: #999;
+}
+
+ul {
+  margin: 10px 0 0 20px;
+  padding: 0;
+}
+
+ul li {
+  list-style: disc;
+  margin-bottom: 5px;
+}
+
+/* CSS for SKILLS */
+.skills-container {
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+.category-container {
+  display: flex;
+}
+
+.category {
+  flex: 1;
+  margin-right: 20px;
+}
+
+.category:last-child {
+  margin-right: 0;
+}
+
+.category h2 {
+  margin-bottom: 20px;
+}
+
+.skill {
+  margin-bottom: 10px;
+}
+
+
+
+.badge {
+  display: inline-block;
+  padding: 6px 12px;
+  border-radius: 20px;
+  color: #fff;
+}
+
+.html {
+  background-color: #4caf50;
+}
+.css {
+  background-color: #2196f3;
+}
+.js {
+  background-color: #ff9800;
+}
+.react {
+  background-color: #00bcd4;
+}
+.node {
+  background-color: #9c27b0;
+}
+.express {
+  background-color: #607d8b;
+}
+.python {
+  background-color: #f44336;
+}
+.sql {
+  background-color: #795548;
+}
+.aws {
+  background-color: #ff5722;
+}
+.azure {
+  background-color: #2196f3;
+}
+.gcp {
+  background-color: #4caf50;
+}
+
+/* CSS for PROJECTS */
+.card-container {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.card {
+  width: calc(33.33% - 20px); /* 33.33% width for each card with 20px margin */
+  margin-bottom: 20px;
+  background-color: #f9f9f9;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+}
+
+.card img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+}
+
+.card-content {
+  padding: 20px;
+}
+
+.card-title {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+.card-description {
+  font-size: 16px;
+  color: #666;
+}
+
+.btn {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: #fff;
+  text-decoration: none;
+  border-radius: 4px;
+  margin-top: 10px;
+}
+
+/* CSS for CONTACT & SOCIALS */
+.contact-social-container {
+  max-width: 800px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+}
+
+.contact,
+.socials {
+  width: 45%;
+}
+
+.contact h2,
+.socials h2 {
+  margin-bottom: 10px;
+}
+
+.contact p {
+  margin: 0 0 10px 0;
+}
+
+.socials ul {
+  list-style: none;
+  padding: 0;
+}
+
+.socials ul li {
+  margin-bottom: 5px;
+}
+
+.socials ul li a {
+  text-decoration: none;
+  color: #007bff;
 }
