--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@
   padding: 0;
 }
 
+/* Body styling */
+
 body {
   font-family: "Roboto", sans-serif;
   background-color: #222;
@@ -64,7 +66,6 @@ body {
 
 /* CSS for ABOUT section */
 
-
 .hero-content {
   max-width: 800px;
   margin: 0 auto;
@@ -85,7 +86,7 @@ body {
   margin-bottom: 0;
 }
 
-/* CSS for EXPERIENCE */
+/* CSS for EXPERIENCE section */
 .experience-container {
   max-width: 800px;
   margin: 0 auto;
@@ -98,8 +99,6 @@ body {
 .experience h2 {
   margin-bottom: 5px;
 }
-
-
 
 .duration {
   font-style: italic;
@@ -116,7 +115,7 @@ ul li {
   margin-bottom: 5px;
 }
 
-/* CSS for SKILLS */
+/* CSS for SKILLS section*/
 .skills-container {
   max-width: 800px;
   margin: 0 auto;
@@ -143,8 +142,6 @@ ul li {
   margin-bottom: 10px;
 }
 
-
-
 .badge {
   display: inline-block;
   padding: 6px 12px;
@@ -153,7 +150,7 @@ ul li {
 }
 
 .html {
-  background-color: #4caf50;
+  background-color: #ff5722;
 }
 .css {
   background-color: #2196f3;
@@ -165,7 +162,7 @@ ul li {
   background-color: #00bcd4;
 }
 .node {
-  background-color: #9c27b0;
+  background-color: #4caf50;
 }
 .express {
   background-color: #607d8b;
@@ -186,7 +183,7 @@ ul li {
   background-color: #4caf50;
 }
 
-/* CSS for PROJECTS */
+/* CSS for PROJECTS section */
 .card-container {
   display: flex;
   justify-content: space-between;
@@ -194,7 +191,7 @@ ul li {
 }
 
 .card {
-  width: calc(33.33% - 20px); /* 33.33% width for each card with 20px margin */
+  width: calc(33.33% - 20px);
   margin-bottom: 20px;
   background-color: #f9f9f9;
   border-radius: 8px;
@@ -232,7 +229,7 @@ ul li {
   margin-top: 10px;
 }
 
-/* CSS for CONTACT & SOCIALS */
+/* CSS for CONTACT & SOCIALS section*/
 .contact-social-container {
   max-width: 800px;
   margin: 0 auto;
