--- a/Assets/Styles/style.css
+++ b/Assets/Styles/style.css
@@ -3,6 +3,27 @@
   padding: 0;
 }
 
+/* Scroll bar */
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
 /* Body styling */
 
 body {
@@ -12,8 +33,8 @@ body {
 }
 
 .main {
-  padding-left: 20%;
-  padding-right: 20%;
+  padding-left: 15%;
+  padding-right: 15%;
 }
 
 .heading {
@@ -26,20 +47,35 @@ body {
 /* Navbar styling */
 .navbar {
   display: flex;
+  justify-content: space-between;
+  align-items: center;
   background-color: #333;
-  overflow: hidden;
+  padding: 0 10px;
+}
+
+.navbar-left,
+.navbar-center,
+.navbar-right {
+  display: flex;
+  align-items: center;
 }
 
 .navbar ul {
+  display: flex;
   list-style-type: none;
   margin: 0;
   padding: 0;
-  overflow: hidden;
+}
+
+.navbar-left ul,
+.navbar-center ul {
+  margin: 0;
+  padding: 0;
 }
 
 .navbar ul li {
+  margin: 0 10px;
   list-style-type: none;
-  float: left;
 }
 
 .navbar ul li a {
@@ -55,6 +91,10 @@ body {
   color: black;
 }
 
+button {
+  padding: 10px;
+}
+
 /* Dark mode styles */
 .dark-mode {
   background-color: white;
@@ -63,10 +103,6 @@ body {
 
 .dark-mode .navbar {
   background-color: #111;
-}
-
-button {
-  padding: 10px;
 }
 
 /* CSS for ABOUT section */
@@ -118,6 +154,10 @@ ul {
 ul li {
   list-style: disc;
   margin-bottom: 5px;
+}
+
+h3 {
+  margin-bottom: 10px;
 }
 
 /* CSS for SKILLS section*/
@@ -240,6 +280,8 @@ ul li {
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
+
+  padding-bottom: 5%;
 }
 
 .contact,
